tests/snapshots/formats__pkcs8-encrypted__pbe-sha1-3des.p8.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ pbe-sha1-3des.p8 — Encrypted private key (PKCS#8), encrypted with pbeWithSHAAnd3-KeyTripleDES-CBC  [0x0+0xb4]
  ▾ Decrypted key — Private key (PKCS#8), ecPublicKey, prime256v1
    ▾ PrivateKeyInfo — SEQUENCE  [#1:0x0+0x8a]
        version: 0 — INTEGER  [#1:0x3+0x3]
      ▾ privateKeyAlgorithm — SEQUENCE, ecPublicKey = prime256v1  [#1:0x6+0x15]
          algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#1:0x8+0x9]
          namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#1:0x11+0xa]
      ▾ privateKey — OCTET STRING, 109 bytes, encapsulates DER  [#1:0x1b+0x6f]
        ▾ ECPrivateKey — SEQUENCE  [#1:0x1d+0x6d]
            version: 1 — INTEGER  [#1:0x1f+0x3]
            privateKey: d4 48 95 38 07 08 88 87 19 59 ab bf d4 a0 69 e1 …  |.H.8.....Y....i.| — OCTET STRING, 32 bytes  [#1:0x22+0x22]
          ▾ publicKey — [1]  [#1:0x44+0x46]
            ▾ publicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#1:0x46+0x44]
                format: uncompressed (0x4)  [#1:0x49+0x1]
                x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#1:0x4a+0x20]
                y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#1:0x6a+0x20]
  ▾ EncryptedPrivateKeyInfo — SEQUENCE  [0x0+0xb4]
    ▾ encryptionAlgorithm — SEQUENCE, pbeWithSHAAnd3-KeyTripleDES-CBC  [0x3+0x1e]
        algorithm: "1.2.840.113549.1.12.1.3" — OBJECT IDENTIFIER, pbeWithSHAAnd3-KeyTripleDES-CBC  [0x5+0xc]
      ▾ pkcs-12PbeParams — SEQUENCE  [0x11+0x10]
          salt: c4 0a 2c 00 5e 11 15 f7  |..,.^...| — OCTET STRING, 8 bytes  [0x13+0xa]
          iterations: 2048 — INTEGER  [0x1d+0x4]
      encryptedData: a9 1d a7 d0 b5 c7 a8 a3 c5 df de a3 11 db 94 3c …  |...............<| — OCTET STRING, 144 bytes  [0x21+0x93]
