tests/snapshots/formats__pkcs8-encrypted__pbes2-aes256.p8.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ pbes2-aes256.p8 — Encrypted private key (PKCS#8), encrypted with PBES2 (PBKDF2 HMAC-SHA256, AES-256-CBC)  [0x0+0xf7]
  ▾ Decrypted key — Private key (PKCS#8), ecPublicKey, prime256v1
    ▾ PrivateKeyInfo — SEQUENCE  [#1:0x0+0x8a]
        version: 0 — INTEGER  [#1:0x3+0x3]
      ▾ privateKeyAlgorithm — SEQUENCE, ecPublicKey = prime256v1  [#1:0x6+0x15]
          algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#1:0x8+0x9]
          namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#1:0x11+0xa]
      ▾ privateKey — OCTET STRING, 109 bytes, encapsulates DER  [#1:0x1b+0x6f]
        ▾ ECPrivateKey — SEQUENCE  [#1:0x1d+0x6d]
            version: 1 — INTEGER  [#1:0x1f+0x3]
            privateKey: d4 48 95 38 07 08 88 87 19 59 ab bf d4 a0 69 e1 …  |.H.8.....Y....i.| — OCTET STRING, 32 bytes  [#1:0x22+0x22]
          ▾ publicKey — [1]  [#1:0x44+0x46]
            ▾ publicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#1:0x46+0x44]
                format: uncompressed (0x4)  [#1:0x49+0x1]
                x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#1:0x4a+0x20]
                y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#1:0x6a+0x20]
  ▾ EncryptedPrivateKeyInfo — SEQUENCE  [0x0+0xf7]
    ▾ encryptionAlgorithm — SEQUENCE, PBES2 (PBKDF2 HMAC-SHA256, AES-256-CBC)  [0x3+0x61]
        algorithm: "1.2.840.113549.1.5.13" — OBJECT IDENTIFIER, PBES2  [0x5+0xb]
      ▾ PBES2-params — SEQUENCE  [0x10+0x54]
        ▾ keyDerivationFunc — SEQUENCE, PBKDF2  [0x12+0x33]
            algorithm: "1.2.840.113549.1.5.12" — OBJECT IDENTIFIER, PBKDF2  [0x14+0xb]
          ▾ PBKDF2-params — SEQUENCE  [0x1f+0x26]
              salt: 98 48 2b 60 70 db 2a 2d de cd 09 98 db 13 c0 f6  |.H+`p.*-........| — OCTET STRING, 16 bytes  [0x21+0x12]
              iterationCount: 2048 — INTEGER  [0x33+0x4]
            ▾ prf — SEQUENCE, hmacWithSHA256  [0x37+0xe]
                algorithm: "1.2.840.113549.2.9" — OBJECT IDENTIFIER, hmacWithSHA256  [0x39+0xa]
                parameters — NULL  [0x43+0x2]
        ▾ encryptionScheme — SEQUENCE, aes256-CBC  [0x45+0x1f]
            algorithm: "2.16.840.1.101.3.4.1.42" — OBJECT IDENTIFIER, aes256-CBC  [0x47+0xb]
            iv: 90 d3 f9 20 30 cc 44 81 f0 09 20 e2 9f 64 2d 52  |... 0.D... ..d-R| — OCTET STRING, 16 bytes  [0x52+0x12]
      encryptedData: 28 ff fe 49 26 15 9f da 7c 70 2c 5c c1 ca 56 e2 …  |(..I&...|p,\..V.| — OCTET STRING, 144 bytes  [0x64+0x93]
